@@ -43,6 +43,10 @@ tip
 * Editable freeze URLs now always use revision hash/id rather than tip or
   branch names which could move.
 
+* Fixed comparison of repo URLs so incidental differences such as
+  presence/absence of final slashes or quoted/unquoted special
+  characters don't trigger "ignore/switch/wipe/backup" choice.
+
 0.4
 ---
 
